--- a/broker/package.json
+++ b/broker/package.json
@@ -9,6 +9,8 @@
   "author": "Ilya Bogdan",
   "license": "ISC",
   "dependencies": {
+    "uuid": "^9.0.1",
     "ws": "^8.16.0"
-  }
+  },
+  "type": "module"
 }
