--- a/broker/package.json
+++ b/broker/package.json
@@ -2,7 +2,7 @@
   "name": "chat-broker",
   "version": "1.0.0",
   "description": "Messages broadcast for chat",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "start": "node server.js"
   },
@@ -12,5 +12,10 @@
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/uuid": "^9.0.8",
+    "@types/ws": "^8.5.10",
+    "typescript": "^5.4.4"
+  }
 }
