--- a/broker/package.json
+++ b/broker/package.json
@@ -4,7 +4,18 @@
   "description": "Messages broadcast for chat",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "clean:dist": "rimraf ./dist",
+    "clean:modules": "rimraf ./node_modules",
+    "clean": "npm run clean:dist && npm run clean:modules",
+    "lint": "npx eslint src/**/*.ts",
+    "lint:fix": "npx eslint --fix src/**/*.ts && npx eslint --fix test/**/*.ts",
+    "prebuild": "npm run clean:dist",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "pretest": "npm run build",
+    "test": "mocha dist/test/**/*.js",
+    "test:dev": "ts-mocha test/**/*.spec.ts -w --watch-files '**/*.ts'"
   },
   "author": "Ilya Bogdan",
   "license": "ISC",
@@ -12,10 +23,24 @@
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
-  "type": "module",
   "devDependencies": {
+    "@types/chai": "^4.3.4",
+    "@types/lodash": "^4.14.188",
+    "@types/mocha": "^10.0.0",
+    "@types/node": "^18.11.9",
+    "@types/sinon": "^10.0.13",
     "@types/uuid": "^9.0.8",
     "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^5.42.1",
+    "@typescript-eslint/parser": "^5.42.1",
+    "chai": "^4.3.7",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.27.0",
+    "mocha": "^10.1.0",
+    "rimraf": "^3.0.2",
+    "sinon": "^14.0.2",
+    "ts-mocha": "^10.0.0",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
   }
 }
