--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,12 @@
-CHAT_WS_URL=
-CHAT_WS_PORT=
+MYSQL_DATABASE=
+MYSQL_USER=
+MYSQL_PASSWORD=
+MYSQL_ROOT_PASSWORD=
+MYSQL_HOST=
+
+#users ids could retrieved by the command `id $USER`
+PUID=1000
+PGID=1000
+
+#nginx
+NGINX_HOST_HTTP_PORT=
