--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,11 +1,9 @@
-FROM node:lts-alpine
+FROM node:19-alpine
 
 WORKDIR /var/www/html
 
-COPY package*.json ./
-RUN npm i
-RUN npm install -g @vue/cli
 COPY . .
+RUN npm i
+RUN npm i -g @vue/cli
 
 EXPOSE 80
-CMD [ "npm", "run", "serve" ]
