--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,11 +2,16 @@ server {
     listen 80;
     listen [::]:80;
 
-    root /var/www/public;
-    index index.php index.html index.htm;
-
     location / {
-        try_files $uri /index.php$is_args$args;
+        proxy_pass http://frontend;
+    }
+
+    location /api {
+        proxy_pass http://backend:9000;
+    }
+
+    location /websocket {
+        proxy_pass http://websocket:3000;
     }
 
     location ~ ^/index\.php(/|$) {
@@ -18,10 +23,6 @@ server {
 
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
-    }
-
-    location ~ \.php$ {
-        return 404;
     }
 
     error_log /var/log/nginx/project_error.log;
