--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -3,7 +3,7 @@ server {
     listen [::]:80;
 
     location / {
-        proxy_pass http://frontend;
+        proxy_pass http://frontend:8080;
     }
 
     location /api {
