--- a/backend/config/packages/nelmio_cors.yaml
+++ b/backend/config/packages/nelmio_cors.yaml
@@ -9,7 +9,7 @@ nelmio_cors:
         max_age: 3600
     paths:
         '^/api/':
-            #allow_origin: ['*']
+            allow_origin: ['*']
             #allow_headers: ['X-Custom-Auth']
             allow_methods: ['POST', 'PUT', 'GET', 'DELETE']
             max_age: 3600
