--- a/backend/config/packages/security.yaml
+++ b/backend/config/packages/security.yaml
@@ -1,19 +1,20 @@
 security:
+    password_hashers:
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
     providers:
-        app_user_provider:
-            entity:
-                class: App\Entity\User
-                property: email
+        users_in_memory: { memory: null }
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            provider: app_user_provider
-            custom_authenticator: App\Security\ApiTokenAuthenticator
+            lazy: true
+            provider: users_in_memory
+            #custom_authenticator: App\Security\ApiTokenAuthenticator
+
     access_control:
-        - { path: ^/api/user, allow_if: "'request.headers.has('X-Api-Token')" }
-        - { path: ^/api/logout, allow_if: "'request.headers.has('X-Api-Token')" }
+        # - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/profile, roles: ROLE_USER }
 
 when@test:
     security:
@@ -24,6 +25,7 @@ when@test:
             # reduces the work factor to the lowest possible values.
             Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface:
                 algorithm: auto
-                cost: 4 # Lowest possible value for bcrypt
-                time_cost: 3 # Lowest possible value for argon
-                memory_cost: 10 # Lowest possible value for argon
+                cost: 4
+                time_cost: 3
+                memory_cost: 10
+
