--- a/broker/package.json
+++ b/broker/package.json
@@ -20,6 +20,8 @@
   "author": "Ilya Bogdan",
   "license": "ISC",
   "dependencies": {
+    "@types/node-fetch": "^2.6.11",
+    "node-fetch": "^2.6.1",
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
