--- a/broker/package.json
+++ b/broker/package.json
@@ -26,7 +26,8 @@
     "ws": "^8.16.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.3.4",
+    "@testdeck/mocha": "^0.3.3",
+    "@types/chai": "^4.3.14",
     "@types/lodash": "^4.14.188",
     "@types/mocha": "^10.0.0",
     "@types/node": "^18.11.9",
@@ -35,13 +36,15 @@
     "@types/ws": "^8.5.10",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
-    "chai": "^4.3.7",
+    "chai": "^4.4.1",
     "concurrently": "^8.2.2",
     "eslint": "^8.27.0",
-    "mocha": "^10.1.0",
+    "mocha": "^10.4.0",
+    "nyc": "^15.1.0",
     "rimraf": "^3.0.2",
     "sinon": "^14.0.2",
     "ts-mocha": "^10.0.0",
+    "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.4"
   }
