--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:8.1.0-fpm-alpine
+FROM php:8.2.0-fpm-alpine
 
 RUN apk add --no-cache curl build-base zlib-dev oniguruma-dev autoconf bash
 
@@ -8,9 +8,8 @@ RUN apk --no-cache add shadow && \
     groupmod -o -g ${PGID} www-data && \
     usermod -o -u ${PUID} -g www-data www-data
 
-WORKDIR /var/www
-COPY . .
+WORKDIR /var/www/html
 
-COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
-
-CMD php-fpm
+RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+RUN curl -sS https://get.symfony.com/cli/installer | bash
+CMD ["symfony", "serve"]
