--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -2,28 +2,18 @@ server {
     listen 80;
     listen [::]:80;
 
-    location / {
-        proxy_pass http://frontend:8080;
-    }
+    #location / {
+    #    proxy_pass http://frontend:8080;
+    #}
 
     location /api {
         proxy_pass http://backend:9000;
     }
 
-    location /websocket {
-        proxy_pass http://websocket:3000;
-    }
+    #location /websocket {
+    #    proxy_pass http://websocket:3000;
+    #}
 
-    location ~ ^/index\.php(/|$) {
-        fastcgi_pass php-upstream;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-
-        fastcgi_buffers 16 16k;
-        fastcgi_buffer_size 32k;
-    }
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
