--- a/broker/package.json
+++ b/broker/package.json
@@ -23,6 +23,7 @@
     "@types/node-fetch": "^2.6.11",
     "@types/ws": "^8.5.10",
     "node-fetch": "^2.6.1",
+    "node-storage": "^0.0.9",
     "uuid": "^9.0.1",
     "ws": "^8.16.0"
   },
