Compose all in docker

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,19 +1,25 @@
 server {
     listen 80;
-    listen [::]:80;
 
-    #location / {
-    #    proxy_pass http://frontend:8080;
-    #}
-
-    location /api {
-        proxy_pass http://backend:9000;
+    location / {
+        proxy_pass http://frontend:8080;
     }
 
-    #location /websocket {
-    #    proxy_pass http://websocket:3000;
-    #}
+    location /api {
+        fastcgi_pass backend:9000;
+        fastcgi_split_path_info ^(.+\.php)(/.*)$;
+        include fastcgi_params;
 
+        fastcgi_buffer_size 128k;
+        fastcgi_buffers 4 256k;
+        fastcgi_busy_buffers_size 256k;
+
+        proxy_pass http://backend:8000;
+    }
+
+    location /store {
+        proxy_pass http://backend:8000/;
+    }
 
     error_log /var/log/nginx/project_error.log;
     access_log /var/log/nginx/project_access.log;
