--- a/.env.dist
+++ b/.env.dist
@@ -1,12 +1,12 @@
+#MySQL
 MYSQL_DATABASE=
 MYSQL_USER=
 MYSQL_PASSWORD=
 MYSQL_ROOT_PASSWORD=
 MYSQL_HOST=
 
-#users ids could retrieved by the command `id $USER`
-PUID=1000
-PGID=1000
+#Broker
+BACKEND_URL=
 
 #nginx
-NGINX_HOST_HTTP_PORT=
+NGINX_HOST_HTTP_PORT=8080
