--- a/broker/Dockerfile
+++ b/broker/Dockerfile
@@ -2,11 +2,10 @@ FROM node:21-alpine
 
 WORKDIR /var/www/html
 
-RUN apk update
-RUN apk upgrade 
-
 COPY package*.json .
 
 RUN npm i 
 
 COPY . .
+
+EXPOSE 3000
