--- a/docker-compose.yml.dist
+++ b/docker-compose.yml.dist
@@ -10,21 +10,23 @@ services:
     ports:
       - ${NGINX_HOST_HTTP_PORT}:80
     volumes:
-      - './docker/nginx:/var/www:rw'
+      - './docker/nginx/log:/var/log/nginx:rw'
+      - './docker/nginx/default.conf:/etc/nginx/conf.d/default.conf'
     depends_on:
       - backend
       - frontend
+      - mysql
+      - websocket
     networks:
       - messanger
 
   backend:
     container_name: backend
     env_file: ./.env
-    build: 
-      context: ./backend
-      args:
-        - PUID=${PUID}
-        - PGID=${PGID}
+    build: ./backend
+    command: symfony serve
+    ports:
+      - "9000:9000"
     volumes:
       - './backend:/var/www/html'
     networks:
@@ -34,6 +36,7 @@ services:
     container_name: frontend
     env_file: ./.env
     build: ./front
+    command: npm run serve
     volumes:
       - './front:/var/www/html'
     networks:
@@ -43,8 +46,11 @@ services:
     container_name: websocket
     env_file: ./.env
     build: ./broker
-    #volumes:
-    #  - './broker:/var/www/html'
+    command: npm run start:dev
+    ports:
+      - "3000:3000"
+    volumes:
+      - './broker:/var/www/html'
     networks:
       - messanger
     depends_on:
@@ -66,4 +72,5 @@ services:
 
 networks:
   messanger:
+    name: messanger
     driver: bridge
