Add swagger doc

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -29,7 +29,8 @@
         "symfony/serializer": "7.0.*",
         "symfony/twig-bundle": "7.0.*",
         "symfony/validator": "7.0.*",
-        "symfony/yaml": "7.0.*"
+        "symfony/yaml": "7.0.*",
+        "zircote/swagger-php": "*"
     },
     "config": {
         "allow-plugins": {
