--- a/broker/package.json
+++ b/broker/package.json
@@ -14,7 +14,7 @@
     "start": "node dist/index.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "pretest": "npm run build",
-    "test": "nyc ./node_modules/.bin/_mocha 'test/**/*.test.ts'",
+    "test": "nyc ./node_modules/.bin/_mocha './src/**/__tests__/*.test.ts'",
     "test:dev": "ts-mocha test/**/*.spec.ts -w --watch-files '**/*.ts'"
   },
   "author": "Ilya Bogdan",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/node-fetch": "^2.6.11",
     "@types/ws": "^8.5.10",
+    "fetch-mock": "^11.0.0",
     "node-fetch": "^2.6.1",
     "node-storage": "^0.0.9",
     "uuid": "^9.0.1",
