--- a/broker/package.json
+++ b/broker/package.json
@@ -14,7 +14,7 @@
     "start": "node dist/index.js",
     "start:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "pretest": "npm run build",
-    "test": "nyc ./node_modules/.bin/_mocha './src/**/__tests__/*.test.ts'",
+    "test": "NODE_ENV=test nyc ./node_modules/.bin/_mocha './src/**/__tests__/*.test.ts'",
     "test:dev": "ts-mocha test/**/*.spec.ts -w --watch-files '**/*.ts'"
   },
   "author": "Ilya Bogdan",
