--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -11,3 +11,5 @@ WORKDIR /var/www/html
 
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
 RUN curl -sS https://get.symfony.com/cli/installer | bash -s -- --install-dir=/usr/local/bin
+RUN composer install
+RUN php bin/console doctrine:migrations:migrate
