--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -2,8 +2,7 @@ FROM node:19-alpine
 
 WORKDIR /var/www/html
 
-COPY package.json .
-COPY package-lock.json . 
+COPY package*.json .
 
 RUN npm install --silent @vue/cli @vue/cli-service @vue/cli-plugin-babel @vue/cli-plugin-eslint
 RUN npm install --silent
